erDiagram
    %% ============================================
    %% Sumear — Schéma de données MVP
    %% ============================================

    profiles {
        uuid id PK "= auth.users.id"
        text email
        text full_name
        text avatar_url
        enum plan "free | pro | complete"
        timestamp created_at
        timestamp updated_at
    }

    api_keys {
        uuid id PK
        uuid user_id FK "→ profiles.id"
        enum provider "openai | anthropic"
        text encrypted_key "AES-256"
        text key_hint "sk-...7xQ2"
        boolean is_valid
        timestamp last_validated_at
        timestamp created_at
    }

    projects {
        uuid id PK
        uuid user_id FK "→ profiles.id"
        text name "ex: Recherche aspirateur"
        text description
        text emoji "🔍"
        integer position "tri manuel"
        timestamp created_at
        timestamp updated_at
    }

    clips {
        uuid id PK
        uuid user_id FK "→ profiles.id"
        uuid project_id FK "→ projects.id (nullable)"
        text source_url
        text source_domain "amazon.fr, fnac.com..."
        text product_name
        text brand
        text image_url
        numeric price
        text currency "EUR, USD..."
        numeric rating "0.00 à 5.00"
        integer review_count
        jsonb raw_jsonld "données Schema.org brutes"
        text raw_markdown "fallback Turndown.js"
        jsonb extracted_specs "specs normalisées"
        jsonb extracted_reviews "avis nettoyés (top 20)"
        enum extraction_method "jsonld | markdown | hybrid"
        timestamp clipped_at
        timestamp created_at
    }

    comparisons {
        uuid id PK
        uuid user_id FK "→ profiles.id"
        uuid project_id FK "→ projects.id (nullable)"
        text title "auto-généré ou custom"
        enum status "pending | processing | completed | failed"
        jsonb result_matrix "matrice de comparaison"
        jsonb result_analysis "red flags + verdict"
        text model_used "claude-sonnet-4.5, gpt-4o..."
        integer input_tokens
        integer output_tokens
        numeric api_cost_usd "coût réel de l'appel"
        enum key_source "managed | byok"
        timestamp completed_at
        timestamp created_at
    }

    comparison_clips {
        uuid comparison_id FK "→ comparisons.id"
        uuid clip_id FK "→ clips.id"
        integer position "ordre dans la matrice"
    }

    usage {
        uuid id PK
        uuid user_id FK "→ profiles.id"
        integer year
        integer month
        integer clips_count "clips créés ce mois"
        integer comparisons_count "analyses générées"
        integer total_input_tokens
        integer total_output_tokens
        numeric total_api_cost_usd
        timestamp updated_at
    }

    %% === RELATIONS ===
    profiles ||--o{ api_keys : "possède"
    profiles ||--o{ projects : "crée"
    profiles ||--o{ clips : "clippe"
    profiles ||--o{ comparisons : "génère"
    profiles ||--o{ usage : "consomme"
    projects ||--o{ clips : "contient"
    projects ||--o{ comparisons : "regroupe"
    comparisons ||--o{ comparison_clips : "inclut"
    clips ||--o{ comparison_clips : "participe à"
